tests/golden/type_errors/char_at_shadowed_call_non_function.cd
let charAt = 123;
charAt("x", 0);
